Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60024

QPolygonF::intersected incorrectly returns a non-empty polygon

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.0 Beta 3
    • 5.8.0
    • Core: Other
    • None

      See attached file for the 2 poly definitions. These polygons do not intersect at all, but QPolygonF::intersected report a non-empty polygon corresponding to the right side of the second polygon which is a rect.
      The same operation using QPolygon, or QRegion, or QPainterPath work ok.

      I believe it is connected with this bug: QTBUG-48003

        1. poly_intersection_bug.txt
          9 kB
        2. pix.png
          pix.png
          20 kB
        3. test.zip
          6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            matirai Philippe
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes